src/objects/Change_Order__c.object
<CustomObject>
    <fields>
        <fullName>Allocated_Hours__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Allocated Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Change Orders</relationshipLabel>
        <relationshipName>Change_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Due_date__c</fullName>
        <label>Due date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Change Orders</relationshipLabel>
        <relationshipName>Change_Orders</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tasks__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Task</label>
        <referenceTo>Project_Task__c</referenceTo>
        <relationshipLabel>Change Orders</relationshipLabel>
        <relationshipName>Change_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Change Order</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CO-{000000}</displayFormat>
        <label>Change Order Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Change Orders</pluralLabel>
    <recordTypes>
        <fullName>McQuay</fullName>
        <active>true</active>
        <label>McQuay</label>
    </recordTypes>
    <recordTypes>
        <fullName>Vendor</fullName>
        <active>true</active>
        <label>Vendor</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Project_Or_Task_is_required</fullName>
        <active>true</active>
        <errorConditionFormula>if ( 
AND(ISBLANK( Project__c )  , ISBLANK( Tasks__c )), 
true, false)</errorConditionFormula>
        <errorMessage>Please enter the Project or Task . Both Values cannot be Blank.</errorMessage>
    </validationRules>
</CustomObject>